# Uni-Minor-Project

./: .gitignore  .~lock.Uni-Minor-Project.odt#  CMakeLists.txt  README.md  Uni-Minor-Project.code-workspace  Uni-Minor-Project.odt  __main__.py  requirements.txt  sdkconfig  sdkconfig.old  watch.py  watchttp.py
EspCamFw/: CMakeLists.txt  sdkconfig
EspCamFw/main/: CMakeLists.txt  Main.c  Secrets.cmake.template
docs/: .~lock.Quickpark-Synposis.docx#  Quickpark-Presentation.pptx  Quickpark-Synposis.docx  References-Free.md  References.md
docs/re/: Uni-Minor-Project.odt
main/: AppCamera.c  AppCamera.h  AppHttp.c  AppHttp.h  AppLog.h  AppMacros.h  AppMain.c  AppMain.h  AppWifi.c  AppWifi.h  CMakeLists.txt
server/: __main__.py  db.sql  index.html  server.mjs
server/js/: package-lock.json  server.mjs
server/js/static/: index.html  protocol.mjs
server/py/: .gitignore  __main__.py  db.sql  requirements.txt  yolo_mve.py
